--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-    "name": "app-template-basic",
-    "version": "1.0.0",
-    "license": "BSD-3-Clause"
+  "name": "app-template-basic",
+  "version": "1.0.0",
+  "description": "Project Skeleton Application Basic for Yii 2.0.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/terabytesoftw/app-template-basic.git"
+  },
+  "author": "Wilmer Arambula",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/terabytesoftw/app-template-basic/issues"
+  },
+  "homepage": "https://github.com/terabytesoftw/app-template-basic#readme"
 }
