--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
                 "config/appbasic.php",
                 "config/params.php"
             ],
+            "console": "config/console.php",
             "web": "config/web.php"
         },
         "installer-types": [
