--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=5.4.0",
+        "php": "^7.2.0",
         "oomphinc/composer-installers-extender": "^1.1",
         "terabytesoftw/app-basic": "^1.0@dev"
     },
@@ -53,11 +53,13 @@
         },
         "config-plugin": {
             "params": [
-                "config/appbasic.php",
                 "config/params.php"
             ],
+            "defines": "config/defines.php",
             "console": "config/console.php",
-            "web": "config/web.php"
+            "web": [
+                "config/web.php"
+            ]
         },
         "installer-types": [
             "bower-asset",
